--- a/TiendaGenerica/src/main/resources/templates/users.html
+++ b/TiendaGenerica/src/main/resources/templates/users.html
@@ -17,7 +17,7 @@
 						document.getElementById("email").value= data.emailUsuario
 						document.getElementById("userName").value= data.nombreUsuario
 						document.getElementById("password").value= data.password
-						document.getElementById("user").value= data.user
+						document.getElementById("user").value= data.usuario
 
 					}else{
 						alert("Usuario no se ha encontrado")
@@ -87,30 +87,30 @@
 	<div class="h2" style="justify-content: center; display: flex; margin-top: 20px;">
 		Tienda Genérica
 	</div>
-	<div style="display: flex; justify-content: center;">
+	<div style="display: flex; justify-content: center; margin-bottom: 50px;">
 		<div style="max-width: 1000px; width: 100%; padding: 0 40px;">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
-			  <a class="navbar-brand" href="#">Usuarios</a>
+			  <a class="navbar-brand" href="/users">Usuarios</a>
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Clientes</a>
+					<a class="nav-link active" aria-current="page" href="/customers">Clientes</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Proveedores</a>
+					<a class="nav-link" href="/provider">Proveedores</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Productos</a>
+					<a class="nav-link" href="/products">Productos</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Ventas</a>
+					<a class="nav-link" href="/sales">Ventas</a>
 				  </li>
 				  <li class="nav-item">
-					<a class="nav-link" href="#">Reportes</a>
+					<a class="nav-link" href="/repors">Reportes</a>
 				  </li>
 				</ul>
 			  </div>
@@ -153,7 +153,7 @@
 					<div class="col" ></div>
 		
 				</div>
-				<div style="margin-top: 20px; display: flex; justify-content: center;">
+				<div style="margin-top: 50px; display: flex; justify-content: center;">
 					<button style="margin:0 10px" type="button" class="btn btn-primary" onclick="get()">Consultar</button>
 					<button style="margin:0 10px" type="button" class="btn btn-primary" onclick="create()">Crear</button>
 					<button style="margin:0 10px" type="button" class="btn btn-primary" onclick="update()">Actualizar</button>
