--- a/TiendaGenerica/src/main/resources/templates/index.html
+++ b/TiendaGenerica/src/main/resources/templates/index.html
@@ -13,7 +13,8 @@
 				type:"GET",
 				url:"http://localhost:8080/users/auth?userName="+user+"&password="+password,
 				success: function(data){
-					if(data == true){
+					if(data && data.cedulaUsuario){
+						localStorage.setItem("userId", data.cedulaUsuario);
 						window.location = "http://localhost:8080/users"
 					}else{
 						alert("Usuario y/o Password incorrectos")
